# progrand

./: Cargo.toml  README.md
src/: main.rs
src/adapters/deployment/: mod.rs  resources.rs
src/domain/: commands.rs  enums.rs  error.rs  interfaces.rs  mod.rs
